Bug 101876 - SIGSEGV when launching Steam
Summary: SIGSEGV when launching Steam
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Mesa core (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: mesa-dev
QA Contact: mesa-dev
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-07-22 12:47 UTC by Jan Ziak (http://atom-symbol.net)
Modified: 2017-07-27 12:32 UTC (History)
4 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Jan Ziak (http://atom-symbol.net) 2017-07-22 12:47:45 UTC
4.5 (Core Profile) Mesa 17.2.0-devel (git-fd199fe4a8)
AMD Radeon (TM) R9 390 Series (AMD HAWAII / DRM 3.15.0 / 4.12.2+, LLVM 4.0.1)

(gdb) bt
#0  0x00000039 in ?? ()
#1  0xf66ac912 in _mesa_hash_table_search (ht=0x5865bf70, key=0x5827a528)
    at /var/tmp/portage/media-libs/mesa-9999/work/mesa-9999/src/util/hash_table.c:246
#2  0xf65f340f in st_framebuffer_iface_remove (stfbi=0x5827a528)
    at /var/tmp/portage/media-libs/mesa-9999/work/mesa-9999/src/mesa/state_tracker/st_manager.c:545
#3  st_api_destroy_drawable (stapi=0xf6c3c860 <st_gl_api>, stfbi=0x5827a528)
    at /var/tmp/portage/media-libs/mesa-9999/work/mesa-9999/src/mesa/state_tracker/st_manager.c:564
#4  0xf673431c in dri_destroy_buffer (dPriv=0x5827a1d8)
    at /var/tmp/portage/media-libs/mesa-9999/work/mesa-9999/src/gallium/state_trackers/dri/dri_drawable.c:186
#5  0xf6732fee in dri_put_drawable (pdp=0x5827a1d8)
    at /var/tmp/portage/media-libs/mesa-9999/work/mesa-9999/src/mesa/drivers/dri/common/dri_util.c:642
#6  0xf67330d5 in dri_put_drawable (pdp=0x5827a1d8)
    at /var/tmp/portage/media-libs/mesa-9999/work/mesa-9999/src/mesa/drivers/dri/common/dri_util.c:696
#7  driDestroyDrawable (pdp=0x5827a1d8)
    at /var/tmp/portage/media-libs/mesa-9999/work/mesa-9999/src/mesa/drivers/dri/common/dri_util.c:695
#8  0xf6f2c5dd in loader_dri3_drawable_fini (draw=0x5827a478)
    at /var/tmp/portage/media-libs/mesa-9999/work/mesa-9999/src/loader/loader_dri3_helper.c:115
#9  0xf6f27b6f in dri3_destroy_drawable (base=0x5827a458)
    at /var/tmp/portage/media-libs/mesa-9999/work/mesa-9999/src/glx/dri3_glx.c:372
#10 0xf6f20fdb in driReleaseDrawables (gc=0x57ed2998)
    at /var/tmp/portage/media-libs/mesa-9999/work/mesa-9999/src/glx/dri_common.c:452
#11 0xf6f27f6e in dri3_bind_context (context=0x57ed2998, old=0x57ed2998, draw=33554471, read=33554471)
    at /var/tmp/portage/media-libs/mesa-9999/work/mesa-9999/src/glx/dri3_glx.c:229
#12 0xf6efb949 in MakeContextCurrent (dpy=0x57cd4f88, draw=33554471, read=33554471, gc_user=0x57ed2998)
    at /var/tmp/portage/media-libs/mesa-9999/work/mesa-9999/src/glx/glxcurrent.c:228
#13 0xf6efbb56 in glXMakeCurrent (dpy=0x57cd4f88, draw=33554471, gc=0x57ed2998)
    at /var/tmp/portage/media-libs/mesa-9999/work/mesa-9999/src/glx/glxcurrent.c:274


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.